css/dashboard.css
#header{
	height: 80px; 
	margin-top:30px; 
	margin-bottom: 30px; 
	vertical-align:center;
	width:100%;
}

#title {
	width:635px;
	margin-top:5px;
	margin-bottom:5px;
	height:70px; 
	background:url('img/California-Carbon-Price-Dashboard-Header-Left.png') no-repeat left center; 
	float:left; 
	display:inline; 
}

#social {
	position:fixed;
	top: 0;
	right: 0;
	margin-top:5px;
	line-height: 40px;
	height: 25px;
	width:950px;
}

#social img {
	height: 25px;
	width: 25px;
	float: right;
	margin-right:5px;
}
	
.notext { 
	font-size: 0; 
	line-height: 0; 
	text-indent: -4000px;
}

.subtext {
	font-size: 0.8em;
	margin-top: 0em !important;
}

.updatewrapper{
	height: 15em;
	float:left;
	overflow-y:scroll;
	width: 100%;
}

.update_panes {
	height: 18.5em;
}

.panes {
	height: 37em;
}

.tooltip {
	border-bottom: 1px dotted; color:#666; outline: none;
	cursor: help; text-decoration: none;
	position: relative;
}
.tooltip span {
	margin-left: -999em;
	position: absolute;
}
.tooltip:hover span {
	border-radius: 5px 5px; -moz-border-radius: 5px; -webkit-border-radius: 5px; 
	font-size:12px;
	color: #666;
	background-color:#ddd;
	position: absolute; left: 1em; top: 2em; z-index: 99;
	margin-left: 0px; width: 225px;
}
.tooltip:hover img {
	border: 0; margin: -10px 0 0 -55px;
	float: left; position: absolute;
}
.tooltip:hover em {
	font-size: 12px;
	display: block; padding: 0.2em 0 0.6em 0;
}

